# ipid

./: .gitignore
backend/: main.py  pyproject.toml
backend/src/: parser.py  parser_second_version.py  pipeline.py  post_processing.py  reader.py  template.py  word_recovery.py
frontend/: main.py  pyproject.toml
frontend/src/: app.py  session_state.py  utils.py
